# rts-with-codex

./: CMakeLists.txt  README.md  build_and_run.bat  build_and_run.ps1  measure_coverage.ps1  run_tests.ps1
.github/workflows/: windows-release.yml
assets/data/: buildings.rtsdata  focuses.rtsdata  technologies.rtsdata
cmake/: Version.h.in
docs/: balance_audit.md  game_engine_architecture.md  strategic_ai_design.md  tech_debt.md
inc/: ArmyGroup.h  ArmyRegistry.h  BalanceModifiers.h  BalanceStats.h  Battle.h  Building.h  BuildingComponents.h  BuildingConfig.h  BuildingFactory.h  Controller.h  DivisionSector.h  Equipment.h  Events.h  Game.h  GameCommand.h  GameSession.h  GameSnapshot.h  GameWindow.h  GameWorld.h  GameWorldInternal.h  Gui.h  GuiController.h  Input.h  InputHandler.h  MapGenerator.h  MovementPlanner.h  Player.h  PlayerDataTracker.h  PlayerEconomy.h  ProductionBuildings.h  Renderer.h  ResearchCatalog.h  Resource.h  RoadNetwork.h  RtsDataFile.h  Scenes.h  SectorGraph.h  Stat.h  StateDevelopment.h  StrategicResource.h  (+7 more)
scripts/: bump_version.ps1
src/: ArmyGroup.cpp  Battle.cpp  Building.cpp  BuildingComponents.cpp  BuildingConfig.cpp  CMakeLists.txt  Controller.cpp  DivisionSector.cpp  Equipment.cpp  Game.cpp  GameWindow.cpp  GameWorld.Checksum.cpp  GameWorld.Commands.cpp  GameWorld.Init.cpp  GameWorld.Persistence.cpp  GameWorld.Render.cpp  GameWorld.TileMap.cpp  GameWorld.cpp  Gui.cpp  GuiController.cpp  MapGenerator.cpp  MovementPlanner.cpp  Player.cpp  Renderer.cpp  ResearchCatalog.cpp  Resource.cpp  RoadNetwork.cpp  RtsDataFile.cpp  Scenes.cpp  SectorGraph.cpp  TcpGameTransport.cpp  Technology.cpp  UnitStats.cpp  main.cpp
tests/: BalanceModifierTests.cpp  BuildingConfigTests.cpp  BuildingDomainTests.cpp  BuildingPlacementTests.cpp  CMakeLists.txt  GameCommandTests.cpp  PlayerEconomyTests.cpp  ResearchCatalogTests.cpp  ResourceBufferTests.cpp  RoadNetworkTests.cpp  StrategicResourceTests.cpp  TechnologyTests.cpp  TileMapDomainTests.cpp  WarSystemTests.cpp
